// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ColorButton blue 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "color": "blue",
    }
  }
>
  Color Button
</button>
`;

exports[`Storyshots ColorButton red 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "color": "red",
    }
  }
>
  Color Button
</button>
`;
